# fable-slicer

./: .gitignore  Cargo.toml  PLAN.md  README.md
cli/: Cargo.toml
cli/src/: main.rs
config/: Cargo.toml
config/profiles/filament/: abs.toml  asa.toml  petg.toml  pla.toml  pla_hf.toml  polymaker_pc.toml
config/profiles/printer/: generic.toml  sovol_zero.toml  voron24.toml
config/profiles/process/: draft.toml  fine.toml  standard.toml
config/src/: lib.rs  profile.rs  state.rs
docs/: ARACHNE-GRAPH-WALK.md  ARCHITECTURE.md  PROFILES.md
engine/: Cargo.toml
engine/examples/: bench.rs  bridge_probe.rs  cover.rs  dbg_arachne.rs  dbg_census.rs  dbg_solid_census.rs  dump_layer.rs  gapview.rs  medial.rs
engine/src/: arc.rs  calibrate.rs  coverage.rs  distributed.rs  emit.rs  fill.rs  lib.rs  medial.rs  peel.rs  plan.rs  skeletal.rs  slice.rs  wall.rs
gcode/: Cargo.toml
gcode/src/: lib.rs
geo2d/: Cargo.toml
geo2d/src/: clipper.rs  lib.rs
gui/: Cargo.toml
gui/assets/: icon.rgba
gui/src/: camera.rs  main.rs  offscreen.rs  render.rs
mesh/: Cargo.toml
mesh/examples/: dump_3mf.rs  gen_bridge.rs  gen_cube.rs  gen_holeplate.rs  gen_overhang.rs  gen_overhang_suite.rs
mesh/src/: lib.rs  threemf.rs
printhost/: Cargo.toml
printhost/src/: lib.rs
