# Workspace manifest.
#
# Crate layout (see docs/ARCHITECTURE.md):
#   geo2d   - integer 2D geometry ("Clipper space"): points, contours, polygons
#   mesh    - triangle mesh: STL I/O, indexed storage, primitives
#   engine  - the slicer core: mesh -> layers -> walls -> infill -> toolpaths -> gcode
#   gcode   - g-code AST, writer, motion-sim time estimate
#   config  - printer/filament/process profile system (built-in + user profiles)
#   gui     - the primary front-end (binary: `slicer`) — bare `cargo run` runs this
#   cli     - command-line front-end (binary: `slicer-cli`)
#
# Project name is a placeholder; crate names are intentionally brand-neutral so a
# rename costs nothing.
[workspace]
resolver = "2"
members = ["geo2d", "mesh", "engine", "gcode", "config", "cli", "gui", "printhost"]
# The GUI is the product: bare `cargo run` / `cargo build` target it.
# NOTE: this also scopes bare `cargo test` — use `cargo test --workspace`.
default-members = ["gui"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
geo2d = { path = "geo2d" }
mesh = { path = "mesh" }
engine = { path = "engine" }
gcode = { path = "gcode" }
config = { path = "config" }
printhost = { path = "printhost" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rayon = "1"
# Segment Voronoi diagram (eadf's Rust port of boost::polygon::voronoi — the
# exact library CuraEngine uses for its skeletal trapezoidation).
boostvoronoi = "0.12"

# Optimize geometry-heavy code even in dev so slicing big meshes stays usable.
[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
