[package]
name = "cli"
description = "Fable Slicer command-line front-end."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fable-slicer-cli"
path = "src/main.rs"

[dependencies]
geo2d = { workspace = true }
mesh = { workspace = true }
engine = { workspace = true }
config = { workspace = true }
printhost = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
